z-index fixes top bar

--- a/css/template.css
+++ b/css/template.css
@@ -62,6 +62,7 @@
     width: 100%;
     height: 20%;
     display: block;
+    z-index: 9999;
 }
 
 .scroller {
